src/index.css
:root {
  font-family: monospace, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  --color-primary: #157aa6;
  --color-primary-light: #a8dcea;
  --color-secondary: #cf4730;
  --color-tertiary: #ff009d;

  color: white;
  background-color: var(--color-primary);

  --neon-shadow: 0 0 4px white, 0 0 11px white, 0 0 19px white,
    0 0 40px var(--color-tertiary), 0 0 80px var(--color-tertiary),
    0 0 120px var(--color-tertiary), 0 0 150px var(--color-tertiary),
    0 0 300px var(--color-tertiary);
  --neon-shadow-sm: 0 0 4px white, 0 0 11px white,
    0 0 15px var(--color-tertiary), 0 0 20px var(--color-tertiary),
    0 0 45px var(--color-tertiary), 0 0 60px var(--color-tertiary),
    0 0 85px var(--color-tertiary);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

@font-face {
  font-family: "Freehand";
  src: url("./fonts/Freehand-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Oswald";
  src: url("./fonts/Oswald-VariableFont_wght.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

body {
  width: 100%;
  margin: 0;
  padding: 0;
}

section {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: var(--color-primary);
}

h1 {
  font-family: "Roboto", sans-serif;
  font-size: 100px;
  line-height: 1;
  margin: 0;
}

h2 {
  font-family: "Freehand", cursive;
  font-size: 45px;
  color: white;
}

h3 {
  color: white;
  font-family: "Oswald", sans-serif;
  font-size: 30px;
}

h4 {
  font-family: "Oswald", sans-serif;
  font-size: 20px;
  color: white;
  margin-bottom: 0;
}

i {
  color: white;
  font-family: "Freehand", cursive;
  font-size: 25px;
}

a {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

.neon-text {
  text-shadow: var(--neon-shadow);
}

.arrow-icon {
  font-size: 30px;
  padding: 20px;
}

#banner {
  height: 100vh;
  height: 100svh;
  justify-content: flex-end;
  background-image: radial-gradient(
      ellipse at center,
      rgba(0, 0, 0, 0) 0%,
      rgba(0, 0, 0, 0.4) 20%,
      rgba(0, 0, 0, 1) 80%
    ),
    url("/assets/quiDoveBattono.jpg");
  background-size: 250%;
  background-position: center 35%;
  background-attachment: fixed;
}

@media only screen and (min-width: 768px) {
  #banner {
    background-size: cover;
  }
  #logo-banner {
    max-width: 280px;
  }
}

#logo-banner {
  max-width: 200px;
}

#bottom-section {
  width: 100%;
  text-align: center;
}

nav {
  display: flex;
  width: 100%;
  position: fixed;
  justify-content: space-between;
  align-items: center;
  z-index: 998;
}

.icon-button {
  display: flex;
  width: 60px;
  height: 60px;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  color: white;
}

#banner h2 {
  font-size: 25px;
}

.side-section {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  justify-self: flex-end;
  align-items: center;
  gap: 20px;
  background-color: var(--color-primary-light);
  color: var(--color-secondary);
}

a.side-section {
  text-decoration: none;
  padding: 0 0 20px 0;
}

.vertical-line {
  background-color: var(--color-secondary);
  width: 3px;
  height: 100%;
}

#right-icon {
  font-size: 30px;
}

.menu-link-title {
  writing-mode: vertical-rl;
  text-orientation: mixed;
  white-space: nowrap;
}

.menu-access-container {
  display: flex;
  width: 100%;
  max-width: 700px;
  align-items: center;
  justify-content: space-between;
  padding: 20px 0;
}

.menu-cards-container {
  display: grid;
  grid-template-columns: auto;
  width: 100%;
  gap: 12px;
  padding-bottom: 12px;
}

@media only screen and (min-width: 768px) {
  .menu-cards-container {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

.menu-card {
  display: flex;
  width: 100%;
  min-height: 20vh;
  background-size: cover;
  background-position: center;
  align-items: center;
  justify-content: space-between;
}

.menu-card-title {
  width: 100%;
  text-align: center;
}

.dialog-container {
  display: flex;
  flex-direction: column;
  position: fixed;
  width: 100%;
  height: 100vh;
  top: 0;
  z-index: 999;
  background-color: var(--color-primary);
}

.dialog-nav {
  display: flex;
  align-items: center;
  font-size: 30px;
  padding: 8px;
}

.dialog-content {
  display: flex;
  flex-direction: column;
  padding: 10px;
  overflow-y: scroll;
  box-shadow: inset 0px 10px 15px -10px black;
}

.dialog-content span {
  display: flex;
  width: 100%;
  max-width: 800px;
  align-self: center;
}

.dialog-content h3 {
  margin-bottom: 0;
}

.menu-row {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: baseline;
  margin-top: 25px;
  gap: 12px;
  max-width: 800px;
  align-self: center;
}

div.menu-row p,
h4 {
  margin: 0;
}

div.menu-row p {
  white-space: nowrap;
}

#about-us {
  height: 100svh;
  padding: 0 20px;
  background-color: transparent;
}

#about-us p {
  max-width: 700px;
  text-align: center;
  font-size: 14px;
}

.about-us-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 40px 10px;
}

.carousel-container {
  width: 100%;
  overflow: hidden;
  position: fixed;
  z-index: -1;
  left: 0;
  top: 0;
}

.carousel-track {
  display: flex;
  justify-content: center;
  align-items: center;
  width: fit-content;
  animation: carousel-scroll 30s linear infinite;
  filter: brightness(0.3);
}

@keyframes carousel-scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

.carousel-track img {
  height: 100svh;
}

#find-us {
  padding: 20px;
}

#find-us h2 {
  z-index: 1;
}

#find-us .content-container {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 1fr 0.5fr;
  gap: 20px;
  padding: 20px 0;
}

.img-acitrezza {
  display: flex;
  width: 100%;
  background-image: url("https://siviaggia.it/wp-content/uploads/sites/2/2019/08/aci-trezza.jpg");
  background-position: center;
  background-size: cover;
  box-shadow: 0 0 50px -20px black;
  position: absolute;
  top: 20px;
  left: 0;
  height: 140px;
  filter: brightness(0.5);
}

.txt-acitrezza {
  display: flex;
  grid-column: 1;
  grid-row: 1;
  text-align: center;
  font-size: 14px;
}

.maps-frame {
  display: flex;
  width: 100%;
  height: 100%;
  grid-column: 1;
  grid-row: 2;
}

@media only screen and (min-width: 780px) {
  #find-us .content-container {
    display: grid;
    grid-template-columns: 70% auto;
    grid-template-rows: 70% auto;
    gap: 40px;
  }
  .img-acitrezza {
    position: relative;
    grid-column: 1;
    grid-row: 1/3;
    top: 0;
    left: 0;
    height: 100%;
    filter: none;
  }
  .txt-acitrezza {
    grid-column: 2;
    grid-row: 1;
    text-align: left;
  }
  .maps-frame {
    grid-column: 2;
    grid-row: 2;
  }
}

#loading-page {
  display: flex;
  width: 100%;
  height: 100lvh;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.logo-spinner {
  width: 200px;
  height: 200px;
  background-image: url("/assets/logotipoWhite.png");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  animation: heartbeat 1s infinite;
}

@keyframes heartbeat {
  0%,
  100% {
    background-size: 100% 100%;
  }
  20% {
    background-size: 80% 80%;
  }
  40% {
    background-size: 100% 100%;
  }
  60% {
    background-size: 80% 80%;
  }
  80% {
    background-size: 100% 100%;
  }
}

footer {
  background-color: var(--color-primary);
  padding: 20px 30px;
}

.footer-container {
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1.3fr 1fr 1fr;
  column-gap: 12px;
  margin: auto;
  width: min-content;
}

footer .logo-container {
  grid-area: 1 / 1 / 4 / 1;
  width: 100px;
  height: 100px;
  background-image: url("/assets/logotipoWhite.png");
  background-position: center;
  background-size: cover;
}

footer .contact-title {
  grid-area: 1 / 2 / 1 / 2;
  font-size: 16px;
  margin-top: 10px;
}

footer a {
  color: white;
  font-size: 12px;
  margin-left: 8px;
}

footer .contact-item {
  display: flex;
  align-items: center;
}

.center-text {
  display: flex;
  width: 100%;
  justify-content: center;
  font-size: 10px;
}

